fix Angular.js to AngularJS

--- a/views/index.erb
+++ b/views/index.erb
@@ -9,7 +9,7 @@
 <body ng-app="">
 <section class="section">
   <div class="container">
-    <h1 class="title">Client-Side Template Injection Sample App with Angular.js</h1>
+    <h1 class="title">Client-Side Template Injection Sample App with AngularJS</h1>
     <p>Display GET Parameter <b>input</b></p>
     <div class="field">
       <div class="control">
